# ExamplePlugins

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  vcpkg.json
.github/workflows/: build.yml
Common/: CMakeLists.txt  common.cpp  common.h
ExampleActions/: CMakeLists.txt  PluginInfo.json
ExampleActions/src/: AbstractExampleActionsModel.cpp  AbstractExampleActionsModel.h  ActionsFilterModel.cpp  ActionsFilterModel.h  ActionsWidget.cpp  ActionsWidget.h  ExampleActionsFilterModel.cpp  ExampleActionsFilterModel.h  ExampleActionsPlugin.cpp  ExampleActionsPlugin.h  ExampleActionsPlugin.json  ExampleActionsTreeModel.cpp  ExampleActionsTreeModel.h  ExampleProxyAction.cpp  ExampleProxyAction.h
ExampleActionsView/: CMakeLists.txt
ExampleActionsView/src/: ExampleActionsViewPlugin.cpp  ExampleActionsViewPlugin.h  ExampleActionsViewPlugin.json
ExampleAnalysis/: CMakeLists.txt  PluginInfo.json
ExampleAnalysis/src/: ExampleAnalysisPlugin.cpp  ExampleAnalysisPlugin.h  ExampleAnalysisPlugin.json  ExampleSettingsWidget.cpp  ExampleSettingsWidget.h  SettingsAction.cpp  SettingsAction.h
ExampleData/: CMakeLists.txt  PluginInfo.json
ExampleData/src/: ExampleDataPlugin.cpp  ExampleDataPlugin.h  ExampleDataPlugin.json
ExampleDependencies/: CMakeLists.txt  PluginInfo.json  README.md
ExampleDependencies/cmake/: ci_fixes.cmake  get_cpm.cmake  highway.patch  install_dependencies.cmake.in  install_dependencies_utils.cmake
ExampleDependencies/src/: ExampleDependenciesPlugin.cpp  ExampleDependenciesPlugin.h  ExampleDependenciesPlugin.json  SettingsAction.cpp  SettingsAction.h
ExampleLoader/: CMakeLists.txt  PluginInfo.json
ExampleLoader/src/: ExampleLoaderPlugin.cpp  ExampleLoaderPlugin.h  ExampleLoaderPlugin.json
ExampleTransformation/: CMakeLists.txt  PluginInfo.json
ExampleTransformation/src/: ExampleTransformationPlugin.cpp  ExampleTransformationPlugin.h  ExampleTransformationPlugin.json
ExampleView/: CMakeLists.txt  PluginInfo.json
ExampleView/src/: ExampleViewPlugin.cpp  ExampleViewPlugin.h  ExampleViewPlugin.json
ExampleViewJS/: CMakeLists.txt  PluginInfo.json  README.md
ExampleViewJS/res/: example_chart.qrc
ExampleViewJS/res/example_chart/: radar_chart.html  radar_chart.tools.js
ExampleViewJS/res/js_libs/: LICENSE_D3  README.md  qwebchannel.tools.js
ExampleViewJS/src/: ChartWidget.cpp  ChartWidget.h  ExampleViewJSPlugin.cpp  ExampleViewJSPlugin.h  ExampleViewJSPlugin.json
ExampleViewOpenGL/: CMakeLists.txt  PluginInfo.json  README.md
ExampleViewOpenGL/src/: ExampleGLWidget.cpp  ExampleGLWidget.h  ExampleViewGLPlugin.cpp  ExampleViewGLPlugin.h  ExampleViewGLPlugin.json  GlobalSettingsAction.cpp  GlobalSettingsAction.h  SettingsAction.cpp  SettingsAction.h
ExampleWriter/: CMakeLists.txt  PluginInfo.json
ExampleWriter/src/: ExampleWriterPlugin.cpp  ExampleWriterPlugin.h  ExampleWriterPlugin.json
